# AgentVault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_basic_usage.py  02_typed_state.py  03_multi_agent_coordination.py  04_langgraph_integration.py  05_real_world_research_team.py  06_reactive_pipeline.py  07_agent_contracts.py
src/agentvault/: __init__.py  async_vault.py  capabilities.py  causality.py  cli.py  contracts.py  exceptions.py  lock.py  merge.py  reactive.py  serialization.py  types.py  vault.py
src/agentvault/backends/: __init__.py  base.py  memory.py  sqlite.py
tests/: conftest.py  test_async_vault.py  test_capabilities.py  test_causality.py  test_cli.py  test_contracts.py  test_coordination.py  test_history.py  test_merge.py  test_reactive.py  test_serialization.py  test_vault.py  test_watch.py
