[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentvault"
version = "0.1.0"
description = "Shared memory and state coordination for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AgentVault Contributors" }]
keywords = ["agents", "multi-agent", "memory", "coordination", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
postgres = ["asyncpg>=0.29", "psycopg[binary]>=3.1"]
all = ["agentvault[redis,postgres]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
agentvault = "agentvault.cli:main"

[project.urls]
Homepage = "https://github.com/agentvault/agentvault"
Repository = "https://github.com/agentvault/agentvault"

[tool.hatch.build.targets.wheel]
packages = ["src/agentvault"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
